2003-03-02 Araki Ken <arakiken@users.sf.net>

	* Word selection stops if character set changed.

2003-03-02 Araki Ken <arakiken@users.sf.net>

	* If ENCODING option not set, character encoding wasn't detected automatically. Fixed.
	  (Thanks to Kubota Tomohiro san)

2003-03-02 Tomohiro KUBOTA <kubota@debian.org>

	* Fixed tools/mlconfig/mc_flags.[ch] and tools/mlconfig/po/POTFILES.in
	  to enable translation (gettextization) of labels which are handled
	  in mc_flags.[ch] .
	* Updated po files in tools/mlconfig/po .

2003-03-02 Araki Ken <arakiken@users.sf.net>

	* If Backspace -> 0-9 or space pressed continuously, backspace was output twice
	  in some environment. Fixed.

2003-03-02 Araki Ken <arakiken@users.sf.net>

	* Added -$/--mc/click_interval option.
	* Updated libtool to 1.4.3.

2003-03-02 Araki Ken <arakiken@users.sf.net>

	* Mlterm/mlclient hung up if mlclient execed with no options. Fixed.
	  (Thanks to Nakada Nobuyoshi san)

2003-03-02 Seiichi SATO <ssato@sh.rim.or.jp>

	* When the font size is dynamically changed, Enlightenment and FVWM2
	  make an error in the calculation for window size (WMHints). Fixed.
	  (Thanks to Sakamoto Hironori san)

2003-03-02 Araki Ken <arakiken@users.sf.net>

	* Added PREV_PTY shortcut.
	  (Thanks to Minami Hirokazu san)

2003-03-01 Araki Ken <arakiken@users.sf.net>

	* Mlconfig writes changed configs alone to ~/.mlterm/main.
	  (Thanks to Kubota Tomohiro san)
	* Revived conf_menu_path option.
	  (Thanks to Nakada Nobuyoshi san)
	* Mlterm follows the change of _XROOTPMAP_ID.
	  (Thanks to Minami Hirokazu san)
	* "encoding" of mlterm configuration protocol accepts "auto".
	* Mlclient supports quoted string as arguments.
	* Each pty has its own window/icon title name.
	  (Thanks to Nanashi san)

2003-03-01 Tomohiro KUBOTA <kubota@debian.org>

	* Changed the way how to choose pty in mlconfig
	  from button array to combobox, in order to avoid
	  extremely wide mlconfig window when many ptys are
	  opened.
